# sqlx-duckdb

./: Cargo.toml  rustfmt.toml
src/: any.rs  arguments.rs  cbox.rs  column.rs  connection.rs  database.rs  decode.rs  duckdb_enums.rs  error.rs  extract_value.rs  interval.rs  lib.rs  options.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
tests/: create_table.rs  database_creation.rs  interval.rs  multitype.rs  simple.rs
tests/fixtures/: empty_db.rs  mod.rs
