[package]
name = "sqlx-duckdb"
version = "0.1.0"
edition = "2021"

[features]
any = ["sqlx-core/any"]

[dependencies]
duckdb = { version = "1.2.0" }
flume = "0.11.1"
futures-core = "0.3.31"
log = "0.4.26"
percent-encoding = "2.3.1"
rust_decimal = "1.36.0"
sqlx-core = { version = "0.8.3", features = ["any"] }
tokio = { version = "1.43.0", features = ["rt"] }
